--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2.11",
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20.26",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "laravel/ui": "^1",
+        "laravelcollective/html": "^6.3"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
