--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
-/vendor.bak
-/vendor/*
+/vendor/
+/vendor.bak/
 .env
 .env.backup
 .phpunit.result.cache
