--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.11",
-        "fideloper/proxy": "^4.4",
-        "laravel/framework": "^6.20.26",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "^6.2",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "1.x",
-        "laravelcollective/html": "^6.3"
+        "laravelcollective/html": "^6.0",
+        "laravel/ui": "1.x"
     },
     "require-dev": {
         "facade/ignition": "^1.0",
