--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 /node_modules
 /public/hot
-/public/storage
+/public/storage/
 /public/assets/*
 /storage/*.key
 /vendor/
-vendor/
-vendor/*
 *.log
 .env
 .env.backup
