--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.11",
+        "barryvdh/laravel-dompdf": "^1.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.0",
-        "laravel/ui": "1.x"
+        "laravel/ui": "1.x",
+        "laravelcollective/html": "^6.0"
     },
     "require-dev": {
         "facade/ignition": "^1.0",
