--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,20 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.11",
+        "php": "^7.2",
         "barryvdh/laravel-dompdf": "^1.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.5",
+        "laravel/tinker": "^2.0",
         "laravel/ui": "1.x",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "6.0"
     },
     "require-dev": {
         "facade/ignition": "^1.0",
-        "fakerphp/faker": "^1.9.1",
+        "fakerphp/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
